--- a/s1fp/index.html
+++ b/s1fp/index.html
@@ -1,1 +1,17 @@
-<img src="flo.png"/>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <link rel="stylesheet" href="style.css">
+    <div class="petal"></div>
+    <div class="petal1"></div>
+    <div class="petal2"></div>
+    <div class="petal3"></div>
+    <div class="petal4"></div>
+    <div class="petal5"></div>
+</body>
+</html>
