--- a/s1fp/index.html
+++ b/s1fp/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Urbanist:wght@800&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -13,5 +16,19 @@
     <div class="petal3"></div>
     <div class="petal4"></div>
     <div class="petal5"></div>
+    <div class="circle"></div>
+    <div id="coco">
+        <div id="coco1"></div>
+        <div id="coco2"></div>
+    </div>
+    <div>    
+        <div class="knife"></div>
+        <a href="prepare.html"><div id="command">LET'S CHOP!</div></a>
+        
+        <div id="blade"></div>
+    </div>
+
 </body>
+
+
 </html>
