--- a/s1fp/index.html
+++ b/s1fp/index.html
@@ -22,9 +22,12 @@
         <div id="coco2"></div>
     </div>
     <div>    
-        <div class="knife"></div>
-        <a href="prepare.html"><div id="command">LET'S CHOP!</div></a>
-        
+            <a href="prepare.html">
+                <div id="command">
+                    LET'S CHOP!
+                </div>
+            </a>
+            <div class="knife"></div>
         <div id="blade"></div>
     </div>
 
