--- a/s1fp/prepare.html
+++ b/s1fp/prepare.html
@@ -10,7 +10,54 @@
 </head>
 <body>
     <link rel="stylesheet" href="stylechop.css">
-
+    <table id="tablecenter">
+        <div>
+        <tr>
+            <td id="tabledesign">
+                <img src="lemon.png" width="220px"/>
+                <p tabindex="0">LEMON</p>
+            </td>
+            <td id="tabledesign">
+                <img src="pineapple.png" width="250px"/>
+                <p tabindex="0">PINEAPPLE</p>
+            </td>
+            <td id="tabledesign">
+                <img src="watermelon.png" width="250px"/>
+                <p tabindex="0">WATERMELON</p>
+            </td>
+        </tr>
+        <tr>
+            <td id="tabledesign">
+                <img src="raspberry.png" width="250px"/>
+                <p tabindex="0">RASPBERRY</p>
+            </td>
+            <td id="tabledesign">
+                <img src="coconut.png" width="250px"/>
+                <p tabindex="0">COCONUT</p>
+            </td>
+            <td id="tabledesign">
+                <img src="mango.png" width="200px"/>
+                <p tabindex="0">MANGO</p>
+            </td>
+        </tr>
+        <tr>
+            <td id="tabledesign">
+                <img src="water.png" width="200px"/>
+                <p tabindex="0">WATER</p>
+            </td>
+            <td id="tabledesign">
+                <img src="lime.png" width="250px"/>
+                <p tabindex="0">LIME</p>
+            </td>
+            <td id="tabledesign">
+                <a href="mix.html">
+                    <img src="flower.png" width="250px"/>       
+                </a>
+            </td>
+        </tr>
+    </div>
+    </table>
+    
 </body>
 
 
