--- a/html/index.html
+++ b/html/index.html
@@ -1,1 +1,38 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Urbanist:wght@800&display=swap" rel="stylesheet">
+    <title>Document</title>
+</head>
+<body>
+    <link rel="stylesheet" href="/css/style.css">
+    <div class="petal"></div>
+    <div class="petal1"></div>
+    <div class="petal2"></div>
+    <div class="petal3"></div>
+    <div class="petal4"></div>
+    <div class="petal5"></div>
+    <div class="circle"></div>
+    <div id="coco">
+        <div id="coco1"></div>
+        <div id="coco2"></div>
+    </div>
+    <div>    
+            <a href="prepare.html">
+                <div id="command">
+                    LET'S CHOP!
+                </div>
+            </a>
+            <div class="knife"></div>
+        <div id="blade"></div>
+    </div>
 
+</body>
+
+
+</html>
+ 
