--- a/s1fp/html/index.html
+++ b/s1fp/html/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <div class="petal"></div>
     <div class="petal1"></div>
     <div class="petal2"></div>
