--- a/s1fp/html/prepare.html
+++ b/s1fp/html/prepare.html
@@ -9,49 +9,49 @@
     <title>Document</title>
 </head>
 <body>
-    <link rel="stylesheet" href="/css/stylechop.css">
+    <link rel="stylesheet" href="../css/stylechop.css">
     <table id="tablecenter">
         <div>
         <tr>
             <td id="tabledesign">
-                <img src="/pictures/lemon.png" width="220px"/>
+                <img src="../pictures/lemon.png" width="220px"/>
                 <p tabindex="0">LEMON</p>
             </td>
             <td id="tabledesign">
-                <img src="/pictures/pineapple.png" width="250px"/>
+                <img src="../pictures/pineapple.png" width="250px"/>
                 <p tabindex="0">PINEAPPLE</p>
             </td>
             <td id="tabledesign">
-                <img src="/pictures/watermelon.png" width="250px"/>
+                <img src="../pictures/watermelon.png" width="250px"/>
                 <p tabindex="0">WATERMELON</p>
             </td>
         </tr>
         <tr>
             <td id="tabledesign">
-                <img src="/pictures/raspberry.png" width="250px"/>
+                <img src="../pictures/raspberry.png" width="250px"/>
                 <p tabindex="0">RASPBERRY</p>
             </td>
             <td id="tabledesign">
-                <img src="/pictures/coconut.png" width="250px"/>
+                <img src="../pictures/coconut.png" width="250px"/>
                 <p tabindex="0">COCONUT</p>
             </td>
             <td id="tabledesign">
-                <img src="/pictures/mango.png" width="200px"/>
+                <img src="../pictures/mango.png" width="200px"/>
                 <p tabindex="0">MANGO</p>
             </td>
         </tr>
         <tr>
             <td id="tabledesign">
-                <img src="/pictures/water.png" width="200px"/>
+                <img src="../pictures/water.png" width="200px"/>
                 <p tabindex="0">WATER</p>
             </td>
             <td id="tabledesign">
-                <img src="/pictures/lime.png" width="250px"/>
+                <img src="../pictures/lime.png" width="250px"/>
                 <p tabindex="0">LIME</p>
             </td>
             <td id="tabledesign">
                 <a href="mix.html">
-                    <img src="/pictures/flower.png" width="250px"/>       
+                    <img src="../pictures/flower.png" width="250px"/>       
                 </a>
             </td>
         </tr>
