--- a/s1fp/html/mix.html
+++ b/s1fp/html/mix.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <link rel="stylesheet" href="/css/stylecup.css">
+    <link rel="stylesheet" href="../css/stylecup.css">
     <div class="spoon move-horizontal"></div>
     <div class="cup"></div>
     <div class="command">
