--- a/s1fp/html/beach.html
+++ b/s1fp/html/beach.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <link rel="stylesheet" href="/css/stylebeach.css">
+    <link rel="stylesheet" href="../css/stylebeach.css">
 
     <div id="container">
         <button class="button">
@@ -19,7 +19,7 @@
         <div class="wave-02"></div>
         <div class="wave-03"></div>
         <div class="face">
-            <img src="/pictures/face.png" width="700px"/>
+            <img src="../pictures/face.png" width="700px"/>
         </div>
         
     </div>
