--- a/s1fp/html/sleep.html
+++ b/s1fp/html/sleep.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <link rel="stylesheet" href="/css/styleocean.css">
+    <link rel="stylesheet" href="../css/styleocean.css">
     <div class="ocean"></div>
     <div class="sun"></div>
     <div class="tree2"></div>
