--- a/s1fp/html/beach.html
+++ b/s1fp/html/beach.html
@@ -24,6 +24,13 @@
         
     </div>
 
+    <a href="mix.html">
+        <div class="icon">
+            <div class="arrow">
+            </div>
+        </div>
+    </a>
+
 
 
 
