--- a/s1fp/html/index.html
+++ b/s1fp/html/index.html
@@ -30,6 +30,39 @@
             <div class="knife"></div>
         <div id="blade"></div>
     </div>
+    <a href="prepare.html">
+        <div class="icon">
+            <div class="arrow">
+            </div>
+        </div>
+    </a>
+    <div class="container">
+        <div class="page">
+            <a href="index.html">
+                Home Page
+            </a>
+        </div>
+        <div class="page">
+            <a href="prepare.html">
+                Prepare
+            </a>
+        </div>
+        <div class="page">
+            <a href="mix.html">
+                Mix
+            </a>
+        </div>
+        <div class="page">
+            <a href="beach.html">
+                Care to Drink?
+            </a>
+        </div>
+        <div class="page">
+            <a href="sleep.html">
+                Chill
+            </a>
+        </div>
+    </div>
 
 </body>
 
