--- a/s1fp/html/mix.html
+++ b/s1fp/html/mix.html
@@ -19,5 +19,13 @@
         </a>
         
     </button>
+
+    <a href="prepare.html">
+        <div class="icon">
+            <div class="arrow">
+            </div>
+        </div>
+    </a>
+   
 </body>
 </html>
