--- a/s1fp/html/prepare.html
+++ b/s1fp/html/prepare.html
@@ -58,6 +58,19 @@
     </div>
     </table>
     
+    <a href="mix.html">
+        <div class="icon">
+            <div class="arrow">
+            </div>
+        </div>
+    </a>
+
+    <a href="index.html">
+        <div class="iconb">
+            <div class="arrowb">
+            </div>
+        </div>
+    </a>
 </body>
 
 
