--- a/s1fp/html/sleep.html
+++ b/s1fp/html/sleep.html
@@ -8,11 +8,26 @@
 </head>
 <body>
     <link rel="stylesheet" href="../css/styleocean.css">
-    <div class="ocean"></div>
-    <div class="sun"></div>
-    <div class="tree2"></div>
-    <div class="center"></div>
-    <div class="tree1"></div>
-    <div class="command">... Chill in your hammock!</div>
+    <div class="ocean">
+        <div class="sun"></div>
+        <div class="tree2"></div>
+        <div class="center"></div>
+        <div class="tree1"></div>
+        <div class="command">... Chill in your hammock!</div>
+    </div>
+
+    <a href="index.html">
+        <div class="icon">
+            <div class="arrow">
+            </div>
+        </div>
+    </a>
+
+    <a href="beach.html">
+        <div class="iconb">
+            <div class="arrowb">
+            </div>
+        </div>
+    </a>
 </body>
 </html>
