--- a/s1fp/html/sleep.html
+++ b/s1fp/html/sleep.html
@@ -23,7 +23,7 @@
         </div>
     </a>
 
-    <a href="beach.html">
+    <a href="https://dharm-upenn.github.io/">
         <div class="iconb">
             <div class="arrowb">
             </div>
