--- a/s1fp/html/sleep.html
+++ b/s1fp/html/sleep.html
@@ -23,7 +23,7 @@
         </div>
     </a>
 
-    <a href="https://dharm-upenn.github.io/">
+    <a href="https://dharm-upenn.github.io/edv">
         <div class="iconb">
             <div class="arrowb">
             </div>
