--- a/s1fp/html/sleep.html
+++ b/s1fp/html/sleep.html
@@ -16,14 +16,14 @@
         <div class="command">... Chill in your hammock!</div>
     </div>
 
-    <a href="index.html">
+    <a href="https://dharm-upenn.github.io/edv">
         <div class="icon">
             <div class="arrow">
             </div>
         </div>
     </a>
 
-    <a href="https://dharm-upenn.github.io/edv">
+    <a href="beach.html">
         <div class="iconb">
             <div class="arrowb">
             </div>
