--- a/s1fp/html/sleep.html
+++ b/s1fp/html/sleep.html
@@ -16,7 +16,7 @@
         <div class="command">... Chill in your hammock!</div>
     </div>
 
-    <a href="https://dharm-upenn.github.io/edv">
+    <a href="https://dharm-upenn.github.io/Newspaper">
         <div class="icon">
             <div class="arrow">
             </div>
