--- a/s2a2/index.html
+++ b/s2a2/index.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Antonio:wght@700&family=Bebas+Neue&family=Montserrat:wght@500&family=Oswald:wght@700&family=Staatliches&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
     <link rel="stylesheet" href="style.css">
     <table id="tablecenter">
+        <div class="command">
+            Super Mario Bros
+        </div>
         <div>
         <tr>
             <td id="tabledesign">
