--- a/s2a2/index.html
+++ b/s2a2/index.html
@@ -17,13 +17,19 @@
         <div>
         <tr>
             <td id="tabledesign">
-                <img src="mario.png" alt="Mario" width="200vw"/>
+                <label for="mario"> CARD
+                    <input type="checkbox" id="mario"></input>
+                    <div id="imagemario"><img src="mario.png" alt="Mario" width="200vw"/></div>
+                </label>
             </td>
             <td id="tabledesign">
                 <img src="mario.png" alt="Mario" width="200vw"/>
             </td>
             <td id="tabledesign">
-                <img src="luigi.png" alt="Luigi" width="200vw"/>
+                <label for="luigi"> CARD
+                    <input type="checkbox" id="luigi"></input>
+                    <div id="imageluigi"><img src="luigi.png" alt="Luigi" width="200vw"/></div>
+                </label>
             </td>
         </tr>
         <tr>
@@ -31,7 +37,10 @@
                 <img src="wario.png" alt="Wario" title="Wario" width="200vw"/>
             </td>
             <td id="tabledesign">
-                <img src="yoshi.png" alt="Yoshi" width="200vw"/>
+                <label for="yoshi"> CARD
+                    <input type="checkbox" id="yoshi"></input>
+                    <div id="imageyoshi"><img src="yoshi.png" alt="Yoshi" width="200vw"/></div>
+                </label>
             </td>
             <td id="tabledesign">
                 <img src="luigi.png" alt="Luigi" width="200vw"/>
@@ -39,13 +48,19 @@
         </tr>
         <tr>
             <td id="tabledesign">
-                <img src="wario.png" alt="Wario" width="200vw"/>
+                <label for="wario"> CARD
+                    <input type="checkbox" id="wario"></input>
+                    <div id="imagewario"><img src="wario.png" alt="Wario" width="200vw"/></div>
+                </label>
             </td>
             <td id="tabledesign">
                 <img src="daisy.png" alt="Daisy" width="200vw"/>
             </td>
             <td id="tabledesign">
-                <img src="peach.png" alt="Peach" width="200vw"/>
+                <label for="peach"> CARD
+                    <input type="checkbox" id="peach"></input>
+                    <div id="imagepeach"><img src="peach.png" alt="Peach" width="200vw"/></div>
+                </label>
             </td>
         </tr>
         <tr>
